# 24hCTF2024_challenges

./: README.md
crypto/Interception/: README.md
crypto/doors/: Cargo.toml  Dockerfile  README.md
crypto/doors/client/: package-lock.json  package.json  svelte.config.js  vite.config.ts
crypto/doors/client/src/: app.html
crypto/doors/client/src/routes/: +layout.svelte  +page.svelte
crypto/doors/client/src/routes/admin/: +page.svelte
crypto/doors/client/src/routes/guest/: +page.svelte
crypto/doors/solution/: README.md
crypto/doors/src/: flag1.txt  flag2.txt  guest_response.txt  main.rs  password.txt
crypto/illumination/: README.md
forensics/The_Victim_1/: README.md
forensics/The_Victim_2/: README.md
forensics/The_Victim_3/: README.md
forensics/The_Victim_4/: README.md
misc/guid/: README.md  docker-compose.yml  entrypoint.sh
misc/perl-meets-brain/: README.md
misc/read-the-rules/: README.md
mobile/UngoingCafeteriaDevelopment/: README.md
mobile/thetimer/: README.md
networking/doorman/: Dockerfile
osint/SteganOsint 1/: README.md
osint/SteganOsint 2/: README.md
osint/Sur les traces de Scofield 1/: README.md
osint/Sur les traces de Scofield 2/: README.md
osint/Sur les traces de Scofield 3/: README.md
reverse/keypad/: README.md  keypad.nim
reverse/prison_cells/: Dockerfile  README.md  prison_cell_management
steganography/inkblot/: README.md
trivia/BabelPourLesAveugles/: README.md
trivia/BeforePrisonBreak/: README.md
trivia/Law25/: README.md
trivia/March28th/: README.md
web/Bookworm/: Dockerfile  README.md  (+1 more)
(+134 files in other folders)
