[package]
name = "jail_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
axum-extra = { version = "0.9.0", features = ["cookie"] }
jsonwebtoken = "9.1.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.193"
serde_json = "1.0.108"
chrono = "0.4.31"
tower-http = { version = "0.5.0", features = ["fs"] }
clap = { version = "4.4.12", features = ["derive"] }
